--- a/index.html
+++ b/index.html
@@ -339,5 +339,24 @@
             <p>&copy; 2024 International Trucks Demo Site. This is a test site for demonstration purposes only. All trademarks and logos are property of their respective owners.</p>
         </div>
     </footer>
+	<script type='text/javascript'>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+			embeddedservice_bootstrap.init(
+				'00Dbm00000SSy4L',
+				'International_LLC_Motors_Channel',
+				'https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171',
+				{
+					scrt2URL: 'https://jcardonp-agentforce-dev-ed.develop.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://jcardonp-agentforce-dev-ed.develop.my.site.com/ESWInternationalLLCMoto1757017923171/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </body>
 </html>
